<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FragmentDiscoverAndMyPost"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_layout"
        style="@style/FragmentDiscoverAndMyPost">

        <ImageView
            style="@style/FragmentDiscoverAndMyPost"
            android:src="@drawable/paris" />

        <LinearLayout
            android:id="@+id/rl_layout"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@color/colorTextViewBackground"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_explore"
                style="@style/CustomNetwork"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_weight="20"
                android:text="@string/explore_paris"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/iv_delete"
                style="@style/CustomNetwork"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:src="@drawable/location_icon" />

            <TextView
                android:id="@+id/tv_paris"
                style="@style/CustomNetwork"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:text="@string/city"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <RelativeLayout
            style="@style/CustomNetwork"
            android:layout_gravity="bottom"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="22dp">

            <Switch
                android:id="@+id/s_switch"
                style="@style/CustomNetwork" />

            <TextView
                android:id="@+id/tv_send_request"
                style="@style/CustomNetwork"
                android:layout_alignParentEnd="true"
                android:background="@drawable/custom_background"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="7dp"
                android:text="@string/send_request"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        style="@style/FragmentDiscoverAndMyPost"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_layout1"
          style="@style/CustomNetwork"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_addcamera"
           style="@style/CustomNetwork"
                android:layout_below="@id/fl_layout"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/add_image_icon" />

            <TextView
                android:id="@+id/tv_name"
             style="@style/CustomNetwork"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/iv_addcamera"
                android:text="@string/name_john"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <RatingBar
                android:id="@+id/rb_ratingbar"
                style="?android:ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/iv_addcamera"
                android:isIndicator="false"
                android:numStars="5"
                android:theme="@style/CustomRatingBar" />
        </RelativeLayout>


        <TextView
       style="@style/CustomNetwork"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:drawablePadding="1dp"
            android:drawableStart="@drawable/time_1"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tv_review"
          style="@style/CustomNetwork"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:drawablePadding="6dp"
            android:drawableStart="@drawable/reviews"
            android:gravity="center"
            android:text="@string/reviews"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

    <TextView
        style="@style/FragmentDiscoverAndMyPost"
        android:layout_marginEnd="66dp"
        android:layout_marginStart="16dp"
        android:text="@string/text"
        android:textColor="@color/colorBlack"
        android:textSize="12sp" />
</LinearLayout>