<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/post"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/custom_left_button"
            android:gravity="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/map"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/custom_center_button"
            android:gravity="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/network"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/custom_right_button"
            android:gravity="center"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        android:id="@+id/rv_layout"/>
</LinearLayout>